[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/sfx/pick_up_ping.wav" type="AudioStream" id=3]
[ext_resource path="res://art/sfx/level_change_ca_ching.wav" type="AudioStream" id=4]
[ext_resource path="res://art/sfx/game_over_aaaah_bye.wav" type="AudioStream" id=5]
[ext_resource path="res://art/music/awake10_megaWall.ogg" type="AudioStream" id=6]

[node name="main" type="Node"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="hair_container" type="Node2D" parent="."]

[node name="hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="score_label" type="Label" parent="hud"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 4, 4 )
text = "0"

[node name="time_label" type="Label" parent="hud"]
margin_left = 932.0
margin_top = 2.0
margin_right = 955.0
margin_bottom = 16.0
rect_scale = Vector2( 4, 4 )
text = "0"

[node name="go_label" type="Label" parent="hud"]
margin_left = 151.0
margin_top = 223.0
margin_right = 191.0
margin_bottom = 237.0
rect_scale = Vector2( 10, 10 )
text = "Game Over"

[node name="game_timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="pick_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -4.379

[node name="level_up" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.042

[node name="go_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.853

[node name="background_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -22.989

[connection signal="timeout" from="game_timer" to="." method="_on_game_timer_timeout"]
